kubernates/student-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: student
          imagePullPolicy: Never
          image: docker.io/library/student
          ports:
            - containerPort: 8080
