kubernates/student-cluster-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-cluster-api-service
spec:
    type: ClusterIP
    selector:
      component: web
    ports:
        - port: 8080
          targetPort: 8080
