kubernates/student-node-port.yaml
---
apiVersion: app/v1
kind: Service
metadata:
  name: student-node-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 8080
      nodePort: 31515
  selector:
    component: web
