kubernates/ingress-service-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: student.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-cluster-api-service
                port:
                  number: 8080
